# recipe_recommend

./: AGENTS.md  CHANGELOG.md  README.md
backend/: .gitignore  README.md  init_db.py  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/models/: __init__.py
backend/app/routes/: ingredients.py  ingredients_db.py  preferences.py  preferences_db.py  recipes.py  recipes_db.py
backend/app/services/: __init__.py  ingredient_service.py  llm_service.py  preference_service.py  recipe_service.py
frontend/: .gitignore  README.md  global.d.ts  package-lock.json  package.json  tsconfig.json
frontend/config/: dev.js  index.js  prod.js
frontend/src/: app.config.ts  app.scss  app.tsx
frontend/src/components/IngredientInput/: index.scss  index.tsx
frontend/src/components/RecipeCard/: index.scss  index.tsx
frontend/src/data/: dishes.ts
frontend/src/pages/chat/: index.config.ts  index.scss  index.tsx
frontend/src/pages/cooking/: index.config.ts  index.scss  index.tsx
frontend/src/pages/favorite/: index.config.ts  index.scss  index.tsx
frontend/src/pages/home/: index.config.ts  index.scss  index.tsx
frontend/src/pages/ingredient/: index.config.ts  index.scss  index.tsx
frontend/src/pages/preference/: index.config.ts  index.scss  index.tsx
frontend/src/services/: recipeService.ts
frontend/src/stores/: ingredientStore.ts  preferenceStore.ts
frontend/src/styles/: global.scss  variables.scss
frontend/src/types/: index.ts
(+6 files in other folders)
